// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu should render only the button if closed 1`] = `
<div
  className="navmenu"
>
  <button
    aria-controls="test-menu"
    aria-expanded={false}
    aria-haspopup="true"
    className="sc-bczRLJ eJQcq"
    disabled={false}
    id="test-menu-button"
    onClick={[Function]}
    type="button"
  >
    Test Menu
  </button>
  <div
    aria-labelledby="test-menu-button"
    id="test-menu"
    role="menu"
  />
</div>
`;

exports[`DropdownMenu should render the menu if open 1`] = `
<div
  className="navmenu"
>
  <button
    aria-controls="test-menu"
    aria-expanded={true}
    aria-haspopup="true"
    className="sc-bczRLJ eJQcq"
    disabled={false}
    id="test-menu-button"
    onClick={[Function]}
    type="button"
  >
    Test Menu
  </button>
  <div
    aria-labelledby="test-menu-button"
    id="test-menu"
    role="menu"
  >
    <a
      href="#"
      onClick={[Function]}
      role="menuitem"
    >
      Test Menu Item
    </a>
  </div>
</div>
`;
